关键字脱敏

--- a/micro-service/pom.xml
+++ b/micro-service/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>quartz</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.cloudevents</groupId>
+            <artifactId>cloudevents-spring</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
     </dependencies>
 
 
