自定义日志拦截 spring starter

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>spring-in-action</module>
         <module>easy-code</module>
         <module>micro-service</module>
+        <module>log-starter</module>
     </modules>
 
 
