--- a/log-starter/pom.xml
+++ b/log-starter/pom.xml
@@ -3,21 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>micro-service</artifactId>
+        <artifactId>java-in-action</artifactId>
         <groupId>com.hunter.demo</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>fund-service</artifactId>
+    <artifactId>log-starter</artifactId>
 
-    <description>基金服务</description>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.hunter.demo</groupId>
-            <artifactId>log-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+<dependencies>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+    </dependency>
+</dependencies>
 </project>
