--- a/micro-service/pom.xml
+++ b/micro-service/pom.xml
@@ -36,10 +36,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!--注册中心-->
      <!--   <dependency>
