--- a/micro-service/eureka-service/pom.xml
+++ b/micro-service/eureka-service/pom.xml
@@ -20,5 +20,20 @@
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
             <version>${eureka.version}</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.3.7</version>
+        </dependency>
     </dependencies>
 </project>
