--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,25 @@
             <scope>import</scope>
         </dependency>
 
-       
 
+
+
+      <!--  <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-parent</artifactId>
+            <version>1.5.0.Beta2</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <!-- jdk8以下就使用mapstruct -->
+            <artifactId>mapstruct-jdk8</artifactId>
+            <version>1.2.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.2.0.Final</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
